# pynecore

./: .gitignore  CLAUDE.md  PYNECORE_CHANGES.md  PYNECORE_RUNTIME_EDIT_VERIFICATION_PLAN.md  PYNE_RUNTIME_PROFILE_RESULTS.md  README.md  TEST_RESULTS_FEB_22_2026.md  compare_ground_truth.py  generate_ground_truth.py  pyproject.toml  sync_from_venv.sh  test_all_sample_pds.py  test_all_samples.py
docs/: README.md  debugging.md  doqkhanh_class_member_audit.md  faq.md  lib.md  strategy.md  style-debt-cleanup.md
ground_truth/: manifest.json
pine2pyne/: README.md  TRANSPILER_BEST_PRACTICES.md  TRANSPILER_USAGE.md  __init__.py  __main__.py  ast_nodes.py  cli.py  codegen.py  errors.py  import_resolver.py  lexer.py  parser.py  pine_builtins.py  symbol_table.py  tokens.py  transformer.py  type_inference.py
sample_pds/: expds_001_Bar-by-bar_execution_demo.pine  expds_002_Repeated_declarations_demo.pine  expds_003_Persistent_declarations_demo.pine  expds_004_Storing_and_using_data_from_previous_bars_demo.pine  expds_005_Recalculation_on_realtime_bars_demo.pine  expds_006_Executions_on_historical_bars_demo.pine  expds_007_Default_strategy_behavior_on_historical_bars_demo.pine  expds_008_Calculation_after_order_fill_on_historical_bars_demo.pine  expds_009_Executions_on_realtime_bars_demo.pine  expds_010_Reloading_a_script_demo.pine  expds_011_Caching_demo.pine  expds_012_History_referencing_demo.pine  expds_013_History_referencing_in_functions_demo.pine  expds_014_Max_bars_back_error_demo.pine  expds_015_Manual_buffer_sizing_demo.pine  expds_016_Local_historical_references_demo.pine  expds_017_Consistent_historical_references_demo.pine  expds_018__ta______functions_in_scopes_demo.pine  expds_019_Cannot_reassign__const__variable_demo.pine  expds_020_Cannot_assign_values_with_stronger_qualifiers_demo.pine  expds_021_Built-in.pine  expds_022_Cannot_assign_a.pine  expds_023__series__keyword_demo.pine  expds_024_Type_keywords_demo.pine  expds_025__color______functions_demo.pine  expds_026_Formatted_string_demo.pine  expds_027_Enum_types_demo.pine  expds_028_plot_fill_demo.pine  (+265 more)
(+964 files in other folders)
